--- a/services/backoffice/src/app/shared/components/button/button.component.html
+++ b/services/backoffice/src/app/shared/components/button/button.component.html
@@ -1,3 +1,6 @@
-<button class="px-3 py-2 font-medium bg-primary rounded text-white">
+<button
+  [type]="type"
+  class="px-3 py-2 font-medium bg-primary rounded text-white"
+>
   <ng-content></ng-content>
 </button>
